--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ghp-remove-old": "git push origin --delete gh-pages",
     "ghp-push": "git subtree push --prefix dist/playground origin gh-pages",
     "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && npm run ghp-push",
-    "build-lib": "ng build icon --prod && npm run copy-license",
+    "build-lib": "ng build --prod && npm run copy-license",
     "copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
     "npm-pack": "cd dist/icon && npm pack",
     "package": "npm run build-lib && npm run npm-pack"
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@joster/icon": "0.0.2",
     "@joster/form-control": "0.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
