add back scripts

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "icon",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "ghp-build": "ng build --project=playground --prod --base-href=https://joster422.github.io/icon/",
+    "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push",
+    "ghp-remove-old": "git push origin --delete gh-pages",
+    "ghp-push": "git subtree push --prefix dist/playground origin gh-pages",
+    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && npm run ghp-push",
+    "build-lib": "ng build --prod && npm run copy-license",
+    "copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
+    "npm-pack": "cd dist/icon && npm pack",
+    "package": "npm run build-lib && npm run npm-pack"
   },
   "private": true,
   "dependencies": {
