--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@joster/form-control": "0.0.6",
+    "@joster/icon": "0.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "@joster/icon": "0.0.4",
-    "@joster/form-control": "0.0.6"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
