--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
-    "@joster/form-control": "0.0.6",
-    "@joster/icon": "0.0.5",
+    "@joster-dev/form-control": "0.0.1",
+    "@joster-dev/icon": "0.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
