--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@joster-dev/form-control": "0.0.3",
-    "@joster-dev/icon": "file:./dist/icon",
+    "@joster-dev/icon": "0.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
