--- a/package.json
+++ b/package.json
@@ -2,15 +2,9 @@
   "name": "icon",
   "version": "0.0.0",
   "scripts": {
-    "ghp-build": "ng build --project=playground --prod --base-href=https://joster-dev.github.io/icon/",
-    "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push",
-    "ghp-remove-old": "git push origin --delete gh-pages",
-    "ghp-push": "git subtree push --prefix dist/playground origin gh-pages",
-    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && npm run ghp-push",
-    "build-lib": "ng build --prod && npm run copy-license",
+    "gh-pages": "ng build --project=playground --prod --base-href=https://joster-dev.github.io/icon/",
     "copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
-    "npm-pack": "cd dist/icon && npm pack",
-    "package": "npm run build-lib && npm run npm-pack"
+    "package": "ng build --prod && npm run copy-license"
   },
   "private": true,
   "dependencies": {
