--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "icon",
   "version": "0.0.0",
   "scripts": {
-    "lib-watch": "ng build ---watch",
-    "doc-watch": "ng serve --project=playground",
     "pages": "ng build --project=playground --prod --base-href=https://joster-dev.github.io/icon/",
+    "build-lib": "ng build --prod && npm run copy-license",
     "copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
-    "package": "ng build --prod && npm run copy-license"
+    "npm-publish": "cd dist/icon && npm publish --force",
+    "package": "npm run build-lib && npm run npm-publish"
   },
   "private": true,
   "dependencies": {
