--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
             "tsConfig": "projects/playground/tsconfig.app.json",
             "aot": true,
             "assets": [
-              "projects/playground/src/assets"
+              "projects/playground/src/assets/icon.png"
             ],
             "styles": [
               "projects/playground/src/styles.scss"
@@ -132,7 +132,6 @@
             "tsConfig": "projects/playground/tsconfig.spec.json",
             "karmaConfig": "projects/playground/karma.conf.js",
             "assets": [
-              "projects/playground/src/favicon.ico",
               "projects/playground/src/assets"
             ],
             "styles": [
