--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "lib": "ng build --watch",
-    "pg": "ng serve --project=playground",
-    "pages": "ng build --project=playground --prod --base-href=https://joster-dev.github.io/icon/",
+    "docs": "ng serve --project=docs",
+    "pages": "ng build --project=docs --prod --base-href=https://joster-dev.github.io/icon/",
     "package": "npm run _build-lib && npm run _npm-publish",
     "_build-lib": "ng build --prod && npm run _copy-license",
     "_copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
@@ -12,40 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.5",
-    "@angular/common": "~10.1.5",
-    "@angular/compiler": "~10.1.5",
-    "@angular/core": "~10.1.5",
-    "@angular/forms": "~10.1.5",
-    "@angular/platform-browser": "~10.1.5",
-    "@angular/platform-browser-dynamic": "~10.1.5",
-    "@angular/router": "~10.1.5",
-    "@joster-dev/form-control": "0.0.7",
-    "@joster-dev/icon": "0.0.13",
-    "rxjs": "~6.6.3",
+    "@angular/animations": "~11.1.0",
+    "@angular/common": "~11.1.0",
+    "@angular/compiler": "~11.1.0",
+    "@angular/core": "~11.1.0",
+    "@angular/forms": "~11.1.0",
+    "@angular/platform-browser": "~11.1.0",
+    "@angular/platform-browser-dynamic": "~11.1.0",
+    "@angular/router": "~11.1.0",
+    "@joster-dev/form-control": "0.1.0",
+    "@joster-dev/icon": "0.1.0",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.6",
-    "@angular-devkit/build-ng-packagr": "~0.1001.6",
-    "@angular/cli": "~10.1.6",
-    "@angular/compiler-cli": "~10.1.5",
+    "@angular-devkit/build-angular": "~0.1101.0",
+    "@angular/cli": "~11.1.0",
+    "@angular/compiler-cli": "~11.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^11.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.2"
   }
 }
