--- a/projects/icon/tsconfig.lib.json
+++ b/projects/icon/tsconfig.lib.json
@@ -3,13 +3,14 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
-    "target": "es2020",
+    "target": "es2015",
     "declaration": true,
+    "declarationMap": true,
     "inlineSources": true,
     "types": [],
     "lib": [
       "dom",
-      "es2020"
+      "es2018"
     ]
   },
   "angularCompilerOptions": {
