--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,19 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "paths": {
+      "icon": [
+        "dist/icon/icon",
+        "dist/icon"
+      ]
+    },
+    "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
@@ -14,12 +25,12 @@
     "lib": [
       "es2018",
       "dom"
-    ],
-    "paths": {
-      "icon": [
-        "dist/icon/icon",
-        "dist/icon"
-      ]
-    }
+    ]
+  },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   }
 }
