--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "icon",
   "version": "0.0.0",
   "scripts": {
-    "lib": "ng build --watch",
-    "docs": "ng serve --project=docs",
     "pages": "ng build --project=docs --prod --base-href=https://joster-dev.github.io/icon/",
     "package": "npm run _build-lib && npm run _npm-publish",
     "_build-lib": "ng build --prod && npm run _copy-license",
-    "_copy-license": "powershell Copy-Item \".\\LICENSE\" -Destination \".\\dist\\icon\"",
+    "_copy-license": "powershell Copy-Item '.\\LICENSE' -Destination '.\\dist\\icon'",
     "_npm-publish": "cd dist/icon && npm publish --force"
   },
   "private": true,
