--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,9 @@
             "styles": [
               "projects/docs/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js"
+            ]
           },
           "configurations": {
             "production": {
