--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~11.1.0",
     "@joster-dev/form-control": "0.1.3",
     "@joster-dev/icon": "0.1.1",
+    "ngx-markdown": "^11.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
