--- a/angular.json
+++ b/angular.json
@@ -12,19 +12,22 @@
       },
       "root": "projects/icon",
       "sourceRoot": "projects/icon/src",
-      "prefix": "icon",
+      "prefix": "jo",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/icon/tsconfig.lib.json",
             "project": "projects/icon/ng-package.json"
           },
           "configurations": {
             "production": {
               "tsConfig": "projects/icon/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/icon/tsconfig.lib.json"
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -33,22 +36,10 @@
             "tsConfig": "projects/icon/tsconfig.spec.json",
             "karmaConfig": "projects/icon/karma.conf.js"
           }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/icon/tsconfig.lib.json",
-              "projects/icon/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
         }
       }
     },
-    "docs": {
+    "demo": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -58,21 +49,21 @@
           "strict": true
         }
       },
-      "root": "projects/docs",
-      "sourceRoot": "projects/docs/src",
-      "prefix": "doc",
+      "root": "projects/demo",
+      "sourceRoot": "projects/demo/src",
+      "prefix": "demo",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/docs",
-            "index": "projects/docs/src/index.html",
-            "main": "projects/docs/src/main.ts",
-            "polyfills": "projects/docs/src/polyfills.ts",
-            "tsConfig": "projects/docs/tsconfig.app.json",
-            "aot": true,
+            "outputPath": "dist/demo",
+            "index": "projects/demo/src/index.html",
+            "main": "projects/demo/src/main.ts",
+            "polyfills": "projects/demo/src/polyfills.ts",
+            "tsConfig": "projects/demo/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/docs/src/assets",
+              "projects/demo/src/assets",
               {
                 "glob": "README.md",
                 "input": "./node_modules/@joster-dev/icon/",
@@ -80,7 +71,7 @@
               }
             ],
             "styles": [
-              "projects/docs/src/styles.scss",
+              "projects/demo/src/styles.scss",
               "node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [
@@ -93,19 +84,6 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "projects/docs/src/environments/environment.ts",
-                  "with": "projects/docs/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -117,66 +95,59 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ]
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/demo/src/environments/environment.ts",
+                  "with": "projects/demo/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "docs:build"
-          },
           "configurations": {
             "production": {
-              "browserTarget": "docs:build:production"
+              "browserTarget": "demo:build:production"
+            },
+            "development": {
+              "browserTarget": "demo:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "docs:build"
+            "browserTarget": "demo:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/docs/src/test.ts",
-            "polyfills": "projects/docs/src/polyfills.ts",
-            "tsConfig": "projects/docs/tsconfig.spec.json",
-            "karmaConfig": "projects/docs/karma.conf.js",
+            "main": "projects/demo/src/test.ts",
+            "polyfills": "projects/demo/src/polyfills.ts",
+            "tsConfig": "projects/demo/tsconfig.spec.json",
+            "karmaConfig": "projects/demo/karma.conf.js",
+            "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/docs/src/assets"
+              "projects/demo/src/assets"
             ],
             "styles": [
-              "projects/docs/src/styles.scss"
+              "projects/demo/src/styles.scss"
             ],
             "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/docs/tsconfig.app.json",
-              "projects/docs/tsconfig.spec.json",
-              "projects/docs/e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "projects/docs/e2e/protractor.conf.js",
-            "devServerTarget": "docs:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "docs:serve:production"
-            }
           }
         }
       }
