remove force no longer needed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "package": "npm run _build-lib && npm run _npm-publish",
     "_build-lib": "ng build --prod && npm run _copy-license",
     "_copy-license": "powershell Copy-Item '.\\LICENSE' -Destination '.\\dist\\icon'",
-    "_npm-publish": "cd dist/icon && npm publish --force"
+    "_npm-publish": "cd dist/icon && npm publish"
   },
   "private": true,
   "dependencies": {
